src/c.zig

// Consolidated C extern declarations for all vDSP modules.
//
// This file contains all extern function declarations used by the vDSP Zig bindings.
// Each module imports `const c = @import("c.zig");` to access these.

const types = @import("types.zig");
const Stride = types.Stride;
const Length = types.Length;
const SplitComplex = types.SplitComplex;
const DoubleSplitComplex = types.DoubleSplitComplex;

// -- Opaque setup types --

pub const FFTSetup = *opaque {};
pub const FFTSetupD = *opaque {};
pub const DFTSetup = *opaque {};
pub const DFTSetupD = *opaque {};
pub const DFTInterleavedSetup = *opaque {};
pub const DFTInterleavedSetupD = *opaque {};
pub const BiquadSetup = *opaque {};
pub const BiquadSetupD = *opaque {};
pub const BiquadmSetup = *opaque {};
pub const BiquadmSetupD = *opaque {};

// -- Special types --

pub const Int24 = extern struct {
    bytes: [3]u8,

    pub fn from(val: i24) Int24 {
        return .{ .bytes = @bitCast(val) };
    }

    pub fn to(self: Int24) i24 {
        return @bitCast(self.bytes);
    }

    pub fn toI32(self: Int24) i32 {
        return self.to();
    }
};

pub const UInt24 = extern struct {
    bytes: [3]u8,

    pub fn from(val: u24) UInt24 {
        return .{ .bytes = @bitCast(val) };
    }

    pub fn to(self: UInt24) u24 {
        return @bitCast(self.bytes);
    }

    pub fn toU32(self: UInt24) u32 {
        return self.to();
    }
};

pub const ComplexF32 = extern struct { real: f32, imag: f32 };
pub const ComplexF64 = extern struct { real: f64, imag: f64 };

// ============================================================================
// dotp
// ============================================================================

pub extern fn vDSP_dotpr(A: [*]const f32, IA: Stride, B: [*]const f32, IB: Stride, C: *f32, N: Length) void;
pub extern fn vDSP_dotprD(A: [*]const f64, IA: Stride, B: [*]const f64, IB: Stride, C: *f64, N: Length) void;
pub extern fn vDSP_dotpr2(A0: [*]const f32, IA0: Stride, A1: [*]const f32, IA1: Stride, B: [*]const f32, IB: Stride, C0: *f32, C1: *f32, N: Length) void;
pub extern fn vDSP_dotpr2D(A0: [*]const f64, IA0: Stride, A1: [*]const f64, IA1: Stride, B: [*]const f64, IB: Stride, C0: *f64, C1: *f64, N: Length) void;
pub extern fn vDSP_zdotpr(A: *const SplitComplex, IA: Stride, B: *const SplitComplex, IB: Stride, C: *SplitComplex, N: Length) void;
pub extern fn vDSP_zdotprD(A: *const DoubleSplitComplex, IA: Stride, B: *const DoubleSplitComplex, IB: Stride, C: *DoubleSplitComplex, N: Length) void;
pub extern fn vDSP_zidotpr(A: *const SplitComplex, IA: Stride, B: *const SplitComplex, IB: Stride, C: *SplitComplex, N: Length) void;
pub extern fn vDSP_zidotprD(A: *const DoubleSplitComplex, IA: Stride, B: *const DoubleSplitComplex, IB: Stride, C: *DoubleSplitComplex, N: Length) void;
pub extern fn vDSP_zrdotpr(A: *const SplitComplex, IA: Stride, B: [*]const f32, IB: Stride, C: *SplitComplex, N: Length) void;
pub extern fn vDSP_zrdotprD(A: *const DoubleSplitComplex, IA: Stride, B: [*]const f64, IB: Stride, C: *DoubleSplitComplex, N: Length) void;
pub extern fn vDSP_dotpr_s1_15(A: [*]const i16, IA: Stride, B: [*]const i16, IB: Stride, C: *i16, N: Length) void;
pub extern fn vDSP_dotpr2_s1_15(A0: [*]const i16, IA0: Stride, A1: [*]const i16, IA1: Stride, B: [*]const i16, IB: Stride, C0: *i16, C1: *i16, N: Length) void;
pub extern fn vDSP_dotpr_s8_24(A: [*]const i32, IA: Stride, B: [*]const i32, IB: Stride, C: *i32, N: Length) void;
pub extern fn vDSP_dotpr2_s8_24(A0: [*]const i32, IA0: Stride, A1: [*]const i32, IA1: Stride, B: [*]const i32, IB: Stride, C0: *i32, C1: *i32, N: Length) void;

// ============================================================================
// vecop
// ============================================================================
